@@ -3,10 +3,10 @@
  * Copyright (C) 2012-2015 Oleg Dolya
  *
  * Shattered Pixel Dungeon
- * Copyright (C) 2014-2024 Evan Debenham
+ * Copyright (C) 2014-2025 Evan Debenham
  *
  * Sandbox Pixel Dungeon
- * Copyright (C) 2023-2024 AlphaDraxonis
+ * Copyright (C) 2023-2025 AlphaDraxonis
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -27,18 +27,22 @@ package com.shatteredpixel.shatteredpixeldungeon.services.server;
 import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.Net;
 import com.badlogic.gdx.files.FileHandle;
+import com.badlogic.gdx.net.HttpStatus;
 import com.badlogic.gdx.utils.Base64Coder;
 import com.shatteredpixel.shatteredpixeldungeon.SandboxPixelDungeon;
 import com.shatteredpixel.shatteredpixeldungeon.editor.util.CustomDungeonSaves;
 import com.shatteredpixel.shatteredpixeldungeon.messages.Messages;
 import com.watabou.NotAllowedInLua;
 import com.watabou.noosa.Game;
+import com.watabou.utils.Bundle;
 
-import java.io.FileNotFoundException;
 import java.net.SocketException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
+
+import static com.shatteredpixel.shatteredpixeldungeon.services.server.ServerConstants.*;
 
 @NotAllowedInLua
 public class UpdateDungeonAction {
@@ -50,45 +54,48 @@ public class UpdateDungeonAction {
 	
 	private DungeonPreview uploadPreview;
 
-	private List<Throwable> errors = new ArrayList<>(2);
-	private List<Net.HttpRequest> openRequests = new ArrayList<>();
-
-	private String folderID;
-	private String oldDungeonID;
+	private final List<Throwable> errors = new ArrayList<>(2);
+	private final List<Net.HttpRequest> openRequests = new ArrayList<>();
+	
+	private String dungeonID;
+	private String versionID;//folder of the version
+	private String uploadTempID;
+	
+	private String versionName;
 
 	private FileHandle[] files;
+	
+	private int filesToSend;
+	private int sentFiles;
 
-	public UpdateDungeonAction(DungeonPreview oldDungeonPreview, String dungeonName, String description, int difficulty, ServerCommunication.UploadCallback callback) {
+	public UpdateDungeonAction(DungeonPreview oldDungeonPreview, String dungeonName, String title, String description, int difficulty, String versionName, ServerCommunication.UploadCallback callback) {
 		this.callback = callback;
 		try {
-
-			if (dungeonName == null) {
-				files = null;
-			} else {
-				files = CustomDungeonSaves.uploadDungeon(dungeonName);
-
-				if (files == null) {
-					callback.failed(new FileNotFoundException());
-					return;
-				}
-			}
+			
+			this.dungeonID = oldDungeonPreview.dungeonID;
 
 			uploadPreview = new DungeonPreview();
-			uploadPreview.title = dungeonName == null ? oldDungeonPreview.title : dungeonName;
+			uploadPreview.title = title;
 			uploadPreview.description = description;
 			uploadPreview.version = Game.version;
 			uploadPreview.intVersion = Game.versionCode;
 			uploadPreview.uploader = oldDungeonPreview.uploader;
 			uploadPreview.difficulty = difficulty;
 
-			oldDungeonID = oldDungeonPreview.dungeonFileID;
+			this.versionName = versionName;
+			
+			if (dungeonName == null) {
+				files = null;
+			} else {
+				files = CustomDungeonSaves.getFilesToUploadDungeon(dungeonName);
+			}
 
 			Net.HttpRequest httpRequest = new Net.HttpRequest(Net.HttpMethods.POST);
 			httpRequest.setUrl(ServerCommunication.getURL()
-					+ "?action=updateStart"
+					+ "?action=" + ACTION_UPDATE_START
 					+ "&userID=" + ServerCommunication.getUUID()
-					+ "&folderID=" + oldDungeonPreview.dungeonFileID
-					+ "&changeFiles=" + (dungeonName != null)
+					+ "&dungeonID=" + dungeonID
+					+ "&includesNewVersion=" + (files != null)
 					+ uploadPreview.writeArgumentsForURL());
 			httpRequest.setHeader("Content-Type", "application/x-www-form-urlencoded");
 			httpRequest.setContent("empty");
@@ -99,8 +106,8 @@ public class UpdateDungeonAction {
 				openRequests.clear();
 				openResponses = 0;
 
-				if (folderID != null) {
-					UploadDungeonAction.sendCancel(folderID, files == null ? oldDungeonID : folderID);
+				if (versionID != null) {
+					UploadDungeonAction.sendCancel(dungeonID);
 				}
 			});
 
@@ -108,27 +115,54 @@ public class UpdateDungeonAction {
 				@Override
 				public void handleHttpResponse(Net.HttpResponse httpResponse) {
 					int statusCode = httpResponse.getStatus().getStatusCode();
-					if (statusCode == 200) {
-						String result = httpResponse.getResultAsString();
-						if (result.startsWith("true")) {
-							folderID = result.substring(4);
-							if (canceled) {
-								UploadDungeonAction.sendCancel(folderID, files == null ? oldDungeonID : folderID);
-								return;
-							}
-							if (files == null) {
-								sendFinish();
-							} else {
-								openResponses += files.length;
-								for (FileHandle f : files) {
-									uploadFile(f);
-								}
+					String result = httpResponse.getResultAsString();
+					
+					if (statusCode != HttpStatus.SC_OK) {
+						Game.runOnRenderThread(() -> callback.failed(new SocketException(statusCode + "\n" + result)));
+						return;
+					}
+					
+					if (result.startsWith(KEYWORD_SUCCESS)) {
+						
+						String jsonResponse = result.substring(KEYWORD_SUCCESS.length());
+						Bundle bundle = null;
+						try {
+							bundle = Bundle.class.getConstructor(String.class).newInstance(jsonResponse);
+						} catch (Exception e) {
+							e.printStackTrace();
+						}
+//						Bundle bundle = new com.watabou.utils.Bundle(jsonResponse);
+						//dungeonID = bundle.getString("dungeonID"); //we already know the dungeonID…
+						versionID = bundle.getString("versionID");
+						uploadTempID = bundle.getString("uploadTempID");
+						if (canceled) {
+							UploadDungeonAction.sendCancel(dungeonID);
+							return;
+						}
+						
+						if (files == null) {
+							sendFinish();
+						} else {
+							sentFiles = 0;
+							filesToSend = countFiles(files);
+							Game.runOnRenderThread(() -> {
+								callback.setMessage(Messages.get(ServerCommunication.class, "uploading_files", sentFiles, filesToSend));
+							});
+							
+							for (FileHandle f : files) {
+								uploadFile(f);
 							}
 						}
-						else if (result.startsWith("banned")) Game.runOnRenderThread(() -> callback.failed(new ServerCommunication.Banned()));
-						else Game.runOnRenderThread(() -> callback.failed(new Exception(result)));
-					} else {
-						Game.runOnRenderThread(() -> callback.failed(new SocketException(String.valueOf(statusCode))));
+					}
+					else if (result.startsWith(KEYWORD_INVALID_DUNGEON_ID)) {
+						//the dungeon we want to update was not found.
+						Game.runOnRenderThread(() -> callback.failed(new InvalidDungeonIDException()));
+					}
+					else if (result.startsWith(KEYWORD_BANNED)) {
+						Game.runOnRenderThread(() -> callback.failed(new ServerCommunication.Banned()));
+					}
+					else {
+						Game.runOnRenderThread(() -> callback.failed(new Exception(result)));
 					}
 				}
 
@@ -147,6 +181,19 @@ public class UpdateDungeonAction {
 			Game.runOnRenderThread(() -> callback.failed(e));
 		}
 	}
+	
+	private int countFiles(FileHandle[] files) {
+		int sum = 0;
+		for (FileHandle f : files) {
+			if (f.isDirectory()) {
+				sum += countFiles(f.list());
+			}
+			else {
+				sum++;
+			}
+		}
+		return sum;
+	}
 
 	private void uploadFile(FileHandle file) {
 		if (file.isDirectory()) {
@@ -154,13 +201,16 @@ public class UpdateDungeonAction {
 			return;
 		}
 		try {
+			
+			openResponses++;
 
 			Net.HttpRequest httpRequest = new Net.HttpRequest(Net.HttpMethods.POST);
 			httpRequest.setUrl(ServerCommunication.getURL()
-					+ "?action=uploadFile"
+					+ "?action=" + ACTION_UPLOAD_FILE
 					+ "&userID=" + ServerCommunication.getUUID()
-					+ "&folderID=" + folderID
-					+ "&fileName=" + URLEncoder.encode(CustomDungeonSaves.cutBasePathFromFileName(file), "UTF-8"));
+					+ "&versionID=" + versionID
+					+ "&dungeonID=" + dungeonID
+					+ "&fileName=" + URLEncoder.encode(CustomDungeonSaves.cutBasePathFromFileName(file), StandardCharsets.UTF_8));
 			httpRequest.setHeader("Content-Type", "application/x-www-form-urlencoded");
 
 			byte[] bytes = file.readBytes();
@@ -188,11 +238,12 @@ public class UpdateDungeonAction {
 	private void uploadDirectory(FileHandle dir) {
 		if (dir.isDirectory()) {
 			FileHandle[] files = dir.list();
-			openResponses += files.length - 1;
 			for (FileHandle file : files) {
 				uploadFile(file);
 			}
-		} else if (dir.exists()) uploadFile(dir);
+		} else if (dir.exists()) {
+			uploadFile(dir);
+		}
 	}
 
 	private class FileUploadListener implements Net.HttpResponseListener {
@@ -206,18 +257,26 @@ public class UpdateDungeonAction {
 		@Override
 		public void handleHttpResponse(Net.HttpResponse httpResponse) {
 			int statusCode = httpResponse.getStatus().getStatusCode();
-			if (statusCode == 200) {
-				String result = httpResponse.getResultAsString();
-				if (!result.startsWith("true")) {
-					if (result.startsWith("banned")) errors.add(new ServerCommunication.Banned());
-					else errors.add(new Exception(result));
-				}
-				else Game.runOnRenderThread(() -> {
-					callback.appendMessage(Messages.get(ServerCommunication.class, "sent", fileName));
-				});
-			} else {
-				errors.add((new SocketException(String.valueOf(statusCode))));
+			String result = httpResponse.getResultAsString();
+			
+			if (statusCode != HttpStatus.SC_OK) {
+				errors.add((new SocketException(statusCode + "\n" + result)));
+				decreaseOpenResponses();
+				return;
 			}
+			
+			if (!result.startsWith(KEYWORD_SUCCESS)) {
+				if (result.startsWith(KEYWORD_BANNED)) errors.add(new ServerCommunication.Banned());
+				else errors.add(new Exception(result));
+				decreaseOpenResponses();
+				return;
+			}
+			
+			Game.runOnRenderThread(() -> {
+				sentFiles++;
+				callback.setMessage(Messages.get(ServerCommunication.class, "uploading_files", sentFiles, filesToSend));
+			});
+			
 			decreaseOpenResponses();
 		}
 
@@ -233,16 +292,17 @@ public class UpdateDungeonAction {
 			decreaseOpenResponses();
 		}
 
-		protected void decreaseOpenResponses() {
+		protected synchronized void decreaseOpenResponses() {
 			openResponses--;
 			if (openResponses <= 0) {
+				
 				if (canceled) return;
 
 				if (errors.isEmpty()) {
 					sendFinish();
+				} else {
+					Game.runOnRenderThread(() -> callback.failed(errors.get(0)));
 				}
-
-				else Game.runOnRenderThread(() -> callback.failed(errors.get(0)));
 			}
 		}
 
@@ -253,12 +313,14 @@ public class UpdateDungeonAction {
 
 		Net.HttpRequest httpRequest = new Net.HttpRequest(Net.HttpMethods.POST);
 		httpRequest.setUrl(ServerCommunication.getURL()
-				+ "?action=finishUpdate"
-				+ "&dungeonID=" + folderID
-				+ "&oldDungeon=" + oldDungeonID
-				+ "&changeFiles=" + (files != null)
+				+ "?action=" + ACTION_UPDATE_FINISH
+				+ "&versionID=" + versionID
+				+ "&dungeonID=" + dungeonID
+				+ "&uploadTempID=" + uploadTempID
+				+ "&userID=" + ServerCommunication.getUUID()
+				+ "&includesNewVersion=" + (files != null)
 				+ uploadPreview.writeArgumentsForURL()
-				+ "&userID=" + ServerCommunication.getUUID());
+				+ "&versionName=" + versionName);
 		httpRequest.setHeader("Content-Type", "application/x-www-form-urlencoded");
 		httpRequest.setContent("empty");
 
@@ -266,16 +328,24 @@ public class UpdateDungeonAction {
 			@Override
 			public void handleHttpResponse(Net.HttpResponse httpResponse) {
 				int statusCode = httpResponse.getStatus().getStatusCode();
-				if (statusCode == 200) {
-					String result = httpResponse.getResultAsString();
-					if (result.startsWith("true")) {
-						Game.runOnRenderThread(() -> callback.successful(files == null ? oldDungeonID : folderID));
-					} else if (result.startsWith("banned"))
-						Game.runOnRenderThread(() -> callback.failed(new ServerCommunication.Banned()));
-					else Game.runOnRenderThread(() -> callback.failed(new Exception(result)));
-				} else {
-					Game.runOnRenderThread(() -> callback.failed(new SocketException(String.valueOf(statusCode))));
+				String result = httpResponse.getResultAsString();
+				
+				if (statusCode != HttpStatus.SC_OK) {
+					Game.runOnRenderThread(() -> callback.failed(new SocketException(statusCode + "\n" + result)));
+					return;
 				}
+				
+				if (!result.startsWith(KEYWORD_SUCCESS)) {
+					if (result.startsWith(KEYWORD_BANNED)) {
+						Game.runOnRenderThread(() -> callback.failed(new ServerCommunication.Banned()));
+					}
+					else {
+						Game.runOnRenderThread(() -> callback.failed(new Exception(result)));
+					}
+					return;
+				}
+				
+				Game.runOnRenderThread(() -> callback.successful(dungeonID));
 			}
 
 			@Override
@@ -287,5 +357,9 @@ public class UpdateDungeonAction {
 			public void cancelled() {
 			}
 		});
+	}
+	
+	public static class InvalidDungeonIDException extends Exception {
+	
 	}
 }
