@@ -3,10 +3,10 @@
  * Copyright (C) 2012-2015 Oleg Dolya
  *
  * Shattered Pixel Dungeon
- * Copyright (C) 2014-2024 Evan Debenham
+ * Copyright (C) 2014-2025 Evan Debenham
  *
  * Sandbox Pixel Dungeon
- * Copyright (C) 2023-2024 AlphaDraxonis
+ * Copyright (C) 2023-2025 AlphaDraxonis
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -27,6 +27,7 @@ package com.shatteredpixel.shatteredpixeldungeon.services.server;
 import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.Net;
 import com.badlogic.gdx.files.FileHandle;
+import com.badlogic.gdx.net.HttpStatus;
 import com.badlogic.gdx.utils.Base64Coder;
 import com.shatteredpixel.shatteredpixeldungeon.SandboxPixelDungeon;
 import com.shatteredpixel.shatteredpixeldungeon.editor.server.ServerDungeonList;
@@ -34,12 +35,15 @@ import com.shatteredpixel.shatteredpixeldungeon.editor.util.CustomDungeonSaves;
 import com.shatteredpixel.shatteredpixeldungeon.messages.Messages;
 import com.watabou.NotAllowedInLua;
 import com.watabou.noosa.Game;
+import com.watabou.utils.Bundle;
 
-import java.io.FileNotFoundException;
 import java.net.SocketException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
+
+import static com.shatteredpixel.shatteredpixeldungeon.services.server.ServerConstants.*;
 
 @NotAllowedInLua
 public class UploadDungeonAction {
@@ -51,38 +55,46 @@ public class UploadDungeonAction {
 	
 	private DungeonPreview uploadPreview;
 
-	private List<Throwable> errors = new ArrayList<>(2);
-	private List<Net.HttpRequest> openRequests = new ArrayList<>();
+	private final List<Throwable> errors = new ArrayList<>(2);
+	private final List<Net.HttpRequest> openRequests = new ArrayList<>();
 
-	private String folderID;
-
+	private String dungeonID;
+	private String versionID;//folder of the version
+	
+	private String versionName;
+	
+	private FileHandle[] files;
+	
+	private int filesToSend;
+	private int sentFiles;
+	
 	//TODO maybe ask if want to include a dungeon before!
-	public UploadDungeonAction(String dungeonName, String description, String userName, int difficulty, ServerCommunication.UploadCallback callback) {
+	public UploadDungeonAction(String dungeonName, String title, String description, String userName, int difficulty, String versionName, ServerCommunication.UploadCallback callback) {
 		this.callback = callback;
 		try {
 
+			//Fill in all the details. The missing parts like dungeonID are later added by the server.
 			uploadPreview = new DungeonPreview();
-			uploadPreview.title = dungeonName;
+			uploadPreview.title = title;
 			uploadPreview.description = description;
 			uploadPreview.version = Game.version;
 			uploadPreview.intVersion = Game.versionCode;
 			uploadPreview.uploader = userName;
 			uploadPreview.difficulty = difficulty;
+			
+			this.versionName = versionName;
+			
+			//get the files that will be uploaded
+			files = CustomDungeonSaves.getFilesToUploadDungeon(dungeonName);
 
+			//create the request
 			Net.HttpRequest httpRequest = new Net.HttpRequest(Net.HttpMethods.POST);
 			httpRequest.setUrl(ServerCommunication.getURL()
-					+ "?action=uploadStart"
+					+ "?action=" + ACTION_UPLOAD_START
 					+ "&userID=" + ServerCommunication.getUUID()
 					+ uploadPreview.writeArgumentsForURL());
 			httpRequest.setHeader("Content-Type", "application/x-www-form-urlencoded");
 			httpRequest.setContent("empty");
-
-			final FileHandle[] files = CustomDungeonSaves.uploadDungeon(dungeonName);
-
-			if (files == null) {
-				callback.failed(new FileNotFoundException());
-				return;
-			}
 
 			callback.showWindow(httpRequest, () -> {
 				canceled = true;
@@ -90,38 +102,56 @@ public class UploadDungeonAction {
 				openRequests.clear();
 				openResponses = 0;
 
-				if (folderID != null) {
-					sendCancel(folderID, folderID);
+				if (versionID != null) {
+					sendCancel(dungeonID);
 				}
 			});
 
+			//send the request
 			Gdx.net.sendHttpRequest(httpRequest, new Net.HttpResponseListener() {
 				@Override
 				public void handleHttpResponse(Net.HttpResponse httpResponse) {
 					int statusCode = httpResponse.getStatus().getStatusCode();
-					if (statusCode == 200) {
-						String result = httpResponse.getResultAsString();
-						if (result.startsWith("true")) {
-							folderID = result.substring(4);
-							if (canceled) {
-								UploadDungeonAction.sendCancel(folderID, folderID);
-								return;
-							}
-							ServerDungeonList.dungeons = null;
-							openResponses += files.length;
-
-							Game.runOnRenderThread(() -> {
-								callback.appendMessage(Messages.get(ServerCommunication.class, "connection_established"));
-							});
-
-							for (FileHandle f : files) {
-								uploadFile(f);
-							}
+					String result = httpResponse.getResultAsString();
+					
+					if (statusCode != HttpStatus.SC_OK) {
+						Game.runOnRenderThread(() -> callback.failed(new SocketException(statusCode + "\n" + result)));
+						return;
+					}
+					
+					if (result.startsWith(KEYWORD_SUCCESS)) {
+						String jsonResponse = result.substring(KEYWORD_SUCCESS.length());
+						Bundle bundle = null;
+						try {
+							bundle = Bundle.class.getConstructor(String.class).newInstance(jsonResponse);
+						} catch (Exception e) {
+							e.printStackTrace();
 						}
-						else if (result.startsWith("banned")) Game.runOnRenderThread(() -> callback.failed(new ServerCommunication.Banned()));
-						else Game.runOnRenderThread(() -> callback.failed(new Exception(result)));
-					} else {
-						Game.runOnRenderThread(() -> callback.failed(new SocketException(String.valueOf(statusCode))));
+//						Bundle bundle = new com.watabou.utils.Bundle(jsonResponse);
+						dungeonID = bundle.getString("dungeonID");
+						versionID = bundle.getString("versionID");
+						if (canceled) {
+							sendCancel(dungeonID);
+							return;
+						}
+						ServerDungeonList.dungeons = null;
+						
+						sentFiles = 0;
+						filesToSend = countFiles(files);
+
+						Game.runOnRenderThread(() -> {
+							callback.setMessage(Messages.get(ServerCommunication.class, "uploading_files", sentFiles, filesToSend));
+						});
+
+						for (FileHandle f : files) {
+							uploadFile(f);
+						}
+					}
+					else if (result.startsWith(KEYWORD_BANNED)) {
+						Game.runOnRenderThread(() -> callback.failed(new ServerCommunication.Banned()));
+					}
+					else {
+						Game.runOnRenderThread(() -> callback.failed(new Exception(result)));
 					}
 				}
 
@@ -140,6 +170,19 @@ public class UploadDungeonAction {
 			Game.runOnRenderThread(() -> callback.failed(e));
 		}
 	}
+	
+	private int countFiles(FileHandle[] files) {
+		int sum = 0;
+		for (FileHandle f : files) {
+			if (f.isDirectory()) {
+				sum += countFiles(f.list());
+			}
+			else {
+				sum++;
+			}
+		}
+		return sum;
+	}
 
 	private void uploadFile(FileHandle file) {
 		if (file.isDirectory()) {
@@ -147,13 +190,16 @@ public class UploadDungeonAction {
 			return;
 		}
 		try {
+			
+			openResponses++;
 
 			Net.HttpRequest httpRequest = new Net.HttpRequest(Net.HttpMethods.POST);
 			httpRequest.setUrl(ServerCommunication.getURL()
-					+ "?action=uploadFile"
+					+ "?action=" + ACTION_UPLOAD_FILE
 					+ "&userID=" + ServerCommunication.getUUID()
-					+ "&folderID=" + folderID
-					+ "&fileName=" + URLEncoder.encode(CustomDungeonSaves.cutBasePathFromFileName(file), "UTF-8"));
+					+ "&versionID=" + versionID
+					+ "&dungeonID=" + dungeonID
+					+ "&fileName=" + URLEncoder.encode(CustomDungeonSaves.cutBasePathFromFileName(file), StandardCharsets.UTF_8));
 			httpRequest.setHeader("Content-Type", "application/x-www-form-urlencoded");
 
 			byte[] bytes = file.readBytes();
@@ -181,11 +227,12 @@ public class UploadDungeonAction {
 	private void uploadDirectory(FileHandle dir) {
 		if (dir.isDirectory()) {
 			FileHandle[] files = dir.list();
-			openResponses += files.length - 1;
 			for (FileHandle file : files) {
 				uploadFile(file);
 			}
-		} else if (dir.exists()) uploadFile(dir);
+		} else if (dir.exists()) {
+			uploadFile(dir);
+		}
 	}
 
 	private class FileUploadListener implements Net.HttpResponseListener {
@@ -199,18 +246,26 @@ public class UploadDungeonAction {
 		@Override
 		public void handleHttpResponse(Net.HttpResponse httpResponse) {
 			int statusCode = httpResponse.getStatus().getStatusCode();
-			if (statusCode == 200) {
-				String result = httpResponse.getResultAsString();
-				if (!result.startsWith("true")) {
-					if (result.startsWith("banned")) errors.add(new ServerCommunication.Banned());
-					else errors.add(new Exception(result));
-				}
-				else Game.runOnRenderThread(() -> {
-					callback.appendMessage(Messages.get(ServerCommunication.class, "sent", fileName));
-				});
-			} else {
-				errors.add((new SocketException(String.valueOf(statusCode))));
+			String result = httpResponse.getResultAsString();
+			
+			if (statusCode != HttpStatus.SC_OK) {
+				errors.add((new SocketException(statusCode + "\n" + result)));
+				decreaseOpenResponses();
+				return;
 			}
+			
+			if (!result.startsWith(KEYWORD_SUCCESS)) {
+				if (result.startsWith(KEYWORD_BANNED)) errors.add(new ServerCommunication.Banned());
+				else errors.add(new Exception(result));
+				decreaseOpenResponses();
+				return;
+			}
+			
+			Game.runOnRenderThread(() -> {
+				sentFiles++;
+				callback.setMessage(Messages.get(ServerCommunication.class, "uploading_files", sentFiles, filesToSend));
+			});
+			
 			decreaseOpenResponses();
 		}
 
@@ -226,7 +281,7 @@ public class UploadDungeonAction {
 			decreaseOpenResponses();
 		}
 
-		protected void decreaseOpenResponses() {
+		protected synchronized void decreaseOpenResponses() {
 			openResponses--;
 			if (openResponses <= 0) {
 
@@ -234,8 +289,9 @@ public class UploadDungeonAction {
 
 				if (errors.isEmpty()) {
 					sendFinish();
+				} else {
+					Game.runOnRenderThread(() -> callback.failed(errors.get(0)));
 				}
-				else Game.runOnRenderThread(() -> callback.failed(errors.get(0)));
 			}
 		}
 
@@ -243,13 +299,17 @@ public class UploadDungeonAction {
 
 	private void sendFinish() {
 		callback.hideCancel();
+		
+		uploadPreview.dungeonID = dungeonID;
 
 		Net.HttpRequest httpRequest = new Net.HttpRequest(Net.HttpMethods.POST);
 		httpRequest.setUrl(ServerCommunication.getURL()
-				+ "?action=finishUpload"
-				+ "&dungeonID=" + folderID
+				+ "?action=" + ACTION_UPLOAD_FINISH
+				+ "&versionID=" + versionID
+				+ "&dungeonID=" + dungeonID
 				+ "&userID=" + ServerCommunication.getUUID()
-				+ uploadPreview.writeArgumentsForURL());
+				+ uploadPreview.writeArgumentsForURL()
+				+ "&versionName=" + versionName);
 		httpRequest.setHeader("Content-Type", "application/x-www-form-urlencoded");
 		httpRequest.setContent("empty");
 
@@ -257,16 +317,24 @@ public class UploadDungeonAction {
 			@Override
 			public void handleHttpResponse(Net.HttpResponse httpResponse) {
 				int statusCode = httpResponse.getStatus().getStatusCode();
-				if (statusCode == 200) {
-					String result = httpResponse.getResultAsString();
-					if (result.startsWith("true")) {
-						Game.runOnRenderThread(() -> callback.successful(folderID));
-					} else if (result.startsWith("banned"))
-						Game.runOnRenderThread(() -> callback.failed(new ServerCommunication.Banned()));
-					else Game.runOnRenderThread(() -> callback.failed(new Exception(result)));
-				} else {
-					Game.runOnRenderThread(() -> callback.failed(new SocketException(String.valueOf(statusCode))));
+				String result = httpResponse.getResultAsString();
+				
+				if (statusCode != HttpStatus.SC_OK) {
+					Game.runOnRenderThread(() -> callback.failed(new SocketException(statusCode + "\n" + result)));
+					return;
 				}
+				
+				if (!result.startsWith(KEYWORD_SUCCESS)) {
+					if (result.startsWith(KEYWORD_BANNED)) {
+						Game.runOnRenderThread(() -> callback.failed(new ServerCommunication.Banned()));
+					}
+					else {
+						Game.runOnRenderThread(() -> callback.failed(new Exception(result)));
+					}
+					return;
+				}
+				
+				Game.runOnRenderThread(() -> callback.successful(dungeonID));
 			}
 
 			@Override
@@ -280,12 +348,12 @@ public class UploadDungeonAction {
 		});
 	}
 
-	public static void sendCancel(String dungeonID, String userIdFileName) {
+	public static void sendCancel(String dungeonID) {
 		Net.HttpRequest httpRequest = new Net.HttpRequest(Net.HttpMethods.POST);
 		httpRequest.setUrl(ServerCommunication.getURL()
-				+ "?action=cancel"
+				+ "?action=" + ACTION_CANCEL
 				+ "&dungeonID=" + dungeonID
-				+ "&userIdFileName=" + userIdFileName
+				+ "&userIdFileName=" + dungeonID //this is correct
 				+ "&userID=" + ServerCommunication.getUUID());
 		httpRequest.setHeader("Content-Type", "application/x-www-form-urlencoded");
 		httpRequest.setContent("empty");
